--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="contact-icons">
       <a href="https://linkedin.com/in/jahnavi-manusani"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/jahnavimanusani"><i class="fab fa-github"></i></a>
-      <a href="https://wa.me/8978999070"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://wa.me/+918978999070"><i class="fab fa-whatsapp"></i></a>
     </div>
   </section>
 
