--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="#contact" class="btn">Hire Me</a>
     </div>
     <div class="hero-img">
-      <img src="Assets/Image.jpg" alt="Profile Picture">
+      <img src="Assets/Image.jpg" alt="Profile">
     </div>
   </section>
 
