--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header>
     <div class="container">
       <h1 class="logo">My Portfolio</h1>
+      <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -93,6 +94,14 @@
   <footer>
     <p>© 2025 Jahnavi Manusani. All Rights Reserved.</p>
   </footer>
+<script>
+  const menuToggle = document.querySelector(".menu-toggle");
+  const nav = document.querySelector("header nav");
+
+  menuToggle.addEventListener("click", () => {
+    nav.classList.toggle("show");
+  });
+</script>
 
 </body>
 </html>
