--- a/index.html
+++ b/index.html
@@ -98,4 +98,12 @@
   </footer>
 
 </body>
+<script>
+  const menuToggle = document.getElementById("menu-toggle");
+  const nav = document.getElementById("nav");
+
+  menuToggle.addEventListener("click", () => {
+    nav.classList.toggle("show");
+  });
+</script>
 </html>
